2006-09-11  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/AllClass.R ("nMatrix"): and subclasses for "nonzero pattern"
		Matrices, since "lMatrix", also "lsparseM" can have NA
	* R/ndenseMatrix.R, etc: new source files
	* man/nsparseMatrix-classes.Rd, etc: new help files
	* tests/: adaptions
	* src/chm_common.c (chm_dense_to_SEXP): and others:
		new 'Rkind' argument: "l*" and "d*" both use CHOLMOD_REAL
	* src/Csparse.c, etc: dito

2006-09-11  Douglas Bates  <bates@R-project.org>

	* src/Mutils.[ch],init.c inst/include/*.h: Move the
	alloc_d**Matrix functions to the lme4 package.

2006-09-09  Douglas Bates  <bates@R-project.org>

	* src/dsCMatrix.c (dsCMatrix_Cholesky): igoring LDL = FALSE now
	fixed

2006-09-09  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/lMatrix.R: new

	* R/sparseMatrix.R (Tsp2grNEL): do not yet use graph::foo()

	* R/dgeMatrix.R: do not define tcrossprod() methods for "matrix"
	* man/tcrossprod.Rd: dito

2006-09-08  Douglas Bates  <bates@stat.wisc.edu>

	* inst/include/Matrix_stubs.c,Matrix.h: Add declarations and stubs
	for exported functions
	* src/Makefile, src/CHOLMOD/Lib/Makefile, src/Metis,CAMD,CCOLAMD:
	Remove partitioning algorithms for sparse matrix reordering.  The
	copyright on the Metis code was problematic and the methods were
	rarely used.
	* src/triplet_to_col.[ch],MMHB.[ch]: Remove triplet_to_col.  Such
	operations are now done entirely in CHOLMOD code.

2006-09-06  Douglas Bates  <bates@R-project.org>

	* src/Mutils.h: Remove functions that are no longer used.

2006-09-04  Douglas Bates  <bates@R-project.org>

	* src/dtCMatrix.c (dtCMatrix_validate): rename functions.
	* src/DEPS.mkf: update

2006-09-02  Martin Maechler  <maechler@stat.math.ethz.ch>

	* created branches/Matrix-for-R-2.3.x;  on trunk: do
	* DESCRIPTION (Version): 0.9975-0
	(Depends): R (>= 2.4.0)

2006-09-01  Douglas Bates  <bates@R-project.org>

	* R/sparseMatrix.R: Added direct method to CsparseMatrix from graphNEL
