@@ -1,3 +1,10 @@
+2006-09-15  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* tests/other-pkgs.R (graph): small extenion in "graph" checks.
+
+	* R/sparseMatrix.R (graphNEL -> Tsparse): method for weight case.
+	(Tsp2grNEL): other fixes needed
+
 2006-09-11  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* R/AllClass.R ("nMatrix"): and subclasses for "nonzero pattern"
